# humanoid_controller

./: .clang-format  .clangd  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  humanoid_controller.xml  package.xml
config/agibot/x2/: joy.yaml  real.yaml  sim.yaml
config/unitree/g1/: joy.yaml  real.yaml  sim.yaml
include/humanoid_controller/: common.h
include/humanoid_controller/tasks/amp_locomotion/: Command.h  Controller.h  Observation.h  Policy.h
include/humanoid_controller/tasks/holosoma_locomotion/: Command.h  Controller.h  Observation.h  Policy.h
include/humanoid_controller/tasks/motion_tracking/: Command.h  Controller.h  Observation.h  Policy.h  README.md
include/humanoid_controller/tasks/unitree_locomotion/: Command.h  Controller.h  Observation.h  Policy.h
launch/: mujoco.launch.py  real.launch.py
src/tasks/amp_locomotion/: Command.cpp  Controller.cpp  Observation.cpp  Policy.cpp
src/tasks/holosoma_locomotion/: Command.cpp  Controller.cpp  Observation.cpp  Policy.cpp
src/tasks/motion_tracking/: Command.cpp  Controller.cpp  Observation.cpp  Policy.cpp
src/tasks/unitree_locomotion/: Command.cpp  Controller.cpp  Observation.cpp  Policy.cpp
utils/marks/: .pre-commit-author.yaml  Makefile.author  PATH_GROUPS_EXAMPLE.md  QUICKSTART.md  README_author_linter.md  author_config.yaml  author_linter.py  check_authors.sh  fix_authors.sh
